syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


option csharp_namespace = "CareerCloud.gRPC.Protos";
package CareerCloud.gRPC;

service CompanyJobEducation {
 rpc ReadCompanyJobEducation(IdRequestJobEducation) returns (CompanyJobEducationPayLoad);
 rpc CreateCompanyJobEducation(CompanyJobEducationPayLoad) returns (google.protobuf.Empty);
 rpc UpdateCompanyJobEducation(CompanyJobEducationPayLoad) returns (google.protobuf.Empty);
 rpc DeleteCompanyJobEducation(CompanyJobEducationPayLoad) returns (google.protobuf.Empty);
}

message IdRequestJobEducation {

     string Id = 1;
}

message CompanyJobEducationPayLoad{
     string Id = 1;
     string Job = 2;
     string Major = 3;
     int32 Importance = 4;
}

                                      